Fix checkbox spacings in forum reply and create topic forms

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -3715,11 +3715,11 @@ a.delete-doc-button {
         .notify-group-members-ui {
             margin-bottom: 10px;
         }
-        .bbp-reply-form {
-            .bbp-submit-wrapper {
-                padding-bottom: 15px;
-                padding-left: 15px;
-            }
+        .bbp-reply-form-checkbox-p {
+            margin: 0;
+        }
+        .bbp-submit-wrapper {
+            margin-top: 0;
         }
 		.bbp-topic-tags {
 			padding: 12px 8px 0 0;
